ops/istio/01-peer-authentication-strict-mtls.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default-strict-mtls
  namespace: yas-dev01
spec:
  mtls:
    mode: STRICT
