ops/istio/02-destinationrule-default-mtls.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: default-mtls
  namespace: yas-dev01
spec:
  host: "*.yas-dev01.svc.cluster.local"
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
