ops/istio/04-authorizationpolicy-tax-only-order.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: tax-only-from-order
  namespace: yas-dev01
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: tax
  action: ALLOW
  rules:
    - from:
        - source:
            principals:
              - "cluster.local/ns/yas-dev01/sa/order"
